# DscreteAIEM

./: .gitignore  LICENSE  README.md  time.txt
DiscreteAIEM_cpu/: CMakeLists.txt  Fun.cpp  Fun.h  GlobalViariables.h  complex0.cpp  complex0.h  main.cpp  math_product.cpp  mine.h
DiscreteAIEM_cpu/output/: doppler.txt  time.txt
DiscreteAIEM_gpu/: CMakeLists.txt  help_func.cu  main.cu  main.h
DiscreteAIEM_gpu/output/: doppler.txt  time.txt
